package Cards;

import com.badlogic.gdx.graphics.g2d.Sprite;

public interface ICardSlot {
    Sprite getCardSlotSprite();

    Float getPosX();

    Float getPosY();
}
