package Cards;

import Cards.Cards;

import java.util.ArrayList;

public interface IDeck {
    ArrayList<Cards> getDeckList();
}
